[package]
name = "tower-acc"
version = "0.1.0"
edition = "2024"
authors = ["Adrien Guillo <adrien.guillo@gmail.com>"]
description = "Adaptive concurrency control for Tower services"
license = "Apache-2.0"
repository = "https://github.com/guilload/tower-acc"
documentation = "https://docs.rs/tower-acc"
keywords = ["tower", "concurrency", "rate-limit", "adaptive", "vegas"]
categories = ["asynchronous", "network-programming"]

[dependencies]
pin-project-lite = "0.2"
tokio = { version = "1.49.0", features = ["sync"] }
tokio-util = "0.7"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
tower = "0.5"
